# geometric_opengl

.ccls-cache/@@home@shoshin@space@own_gl/: @usr@include@GL@gl.h.blob  @usr@include@GL@glew.h.blob  @usr@include@GL@glext.h.blob  @usr@include@GL@glu.h.blob  @usr@include@GLFW@glfw3.h.blob  @usr@include@KHR@khrplatform.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@assert.h.blob  @usr@include@c++@12@backward@binders.h.blob  @usr@include@c++@12@bits@alloc_traits.h.blob  @usr@include@c++@12@bits@allocator.h.blob  @usr@include@c++@12@bits@basic_ios.h.blob  @usr@include@c++@12@bits@basic_ios.tcc.blob  @usr@include@c++@12@bits@basic_string.h.blob  @usr@include@c++@12@bits@basic_string.tcc.blob  @usr@include@c++@12@bits@char_traits.h.blob  @usr@include@c++@12@bits@charconv.h.blob  @usr@include@c++@12@bits@codecvt.h.blob  @usr@include@c++@12@bits@concept_check.h.blob  @usr@include@c++@12@bits@cpp_type_traits.h.blob  @usr@include@c++@12@bits@cxxabi_forced.h.blob  @usr@include@c++@12@bits@cxxabi_init_exception.h.blob  @usr@include@c++@12@bits@exception.h.blob  @usr@include@c++@12@bits@exception_defines.h.blob  @usr@include@c++@12@bits@exception_ptr.h.blob  @usr@include@c++@12@bits@fstream.tcc.blob  @usr@include@c++@12@bits@functexcept.h.blob  @usr@include@c++@12@bits@functional_hash.h.blob  @usr@include@c++@12@bits@hash_bytes.h.blob  @usr@include@c++@12@bits@invoke.h.blob  @usr@include@c++@12@bits@ios_base.h.blob  @usr@include@c++@12@bits@istream.tcc.blob  @usr@include@c++@12@bits@locale_classes.h.blob  @usr@include@c++@12@bits@locale_classes.tcc.blob  @usr@include@c++@12@bits@locale_facets.h.blob  @usr@include@c++@12@bits@locale_facets.tcc.blob  @usr@include@c++@12@bits@localefwd.h.blob  @usr@include@c++@12@bits@memoryfwd.h.blob  (+334 more)
.ccls-cache/@home@shoshin@space@own_gl/: first_steps@src@file_manager.cpp  first_steps@src@file_manager.cpp.blob  first_steps@src@file_manager.h  first_steps@src@file_manager.h.blob  first_steps@src@main.cpp.blob  first_steps@src@opengl_shader.cpp  first_steps@src@opengl_shader.cpp.blob  first_steps@src@opengl_shader.h  first_steps@src@opengl_shader.h.blob  img_gui@lib@imgui@backends@imgui_impl_glfw.cpp.blob  img_gui@lib@imgui@backends@imgui_impl_glfw.h.blob  img_gui@lib@imgui@backends@imgui_impl_opengl3.cpp.blob  img_gui@lib@imgui@backends@imgui_impl_opengl3.h.blob  img_gui@lib@imgui@backends@imgui_impl_opengl3_loader.h.blob  img_gui@lib@imgui@examples@example_glfw_opengl2@main.cpp.blob  img_gui@lib@imgui@examples@example_glfw_opengl3@main.cpp.blob  img_gui@lib@imgui@examples@example_sdl2_opengl3@main.cpp.blob  img_gui@lib@imgui@imconfig.h.blob  img_gui@lib@imgui@imgui.h.blob  img_gui@lib@imgui@imgui_demo.cpp.blob  img_gui@src@main.cpp  img_gui@src@main.cpp.blob  src@main.cpp  src@main.cpp.blob
first_steps/: CMakeLists.txt
first_steps/src/: base-cross.vs  base-shader.fs  base-shader.vs  main.cpp
img_gui/: CMakeLists.txt
